deploy/kubernetes.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: callback-proxy-service

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: callback-proxy-service
  namespace: callback-proxy-service
  labels:
    app.kubernetes.io/name: callback-proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: callback-proxy-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: callback-proxy-service
    spec:
      containers:
        - name: callback-proxy-service
          image: antonjohansson/callback-proxy-service:v1.0.0
          ports:
            - name: config
              port: 8181
            - name: proxy
              port: 8182
          volumeMounts:
            - name: config
              mountPath: /etc/callback-proxy-service
              readOnly: true
            - name: data
              mountPath: /var/callback-proxy-service
      volumes:
        - name: config
          configMap:
            name: callback-proxy-service-config
        - name: data
          emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: callback-proxy-service
  namespace: callback-proxy-service
  labels:
    app.kubernetes.io/name: callback-proxy-service
spec:
  selector:
    app.kubernetes.io/name: callback-proxy-service
  ports:
    - name: config
      port: 8181
      protocol: TCP
    - name: proxy
      port: 8182
      protocol: TCP

---
kind: Ingress
apiVersion: extensions/v1beta1
  name: callback-proxy-service-ui
  namenamespace: callback-proxy-service
  labels:
    app.kubernetes.io/name: callback-proxy-service
    app.kubernetes.io/component: ui
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  rules:
    - host: callback-proxy.svc.example.local
      http:
        paths:
          - path: /
            backend:
              serviceName: callback-proxy-service
              servicePort: 8181
  tls:
    - secretName: star.svc.example.local
      hosts:
        - callback-proxy.svc.example.local

---
kind: Ingress
apiVersion: extensions/v1beta1
  name: callback-proxy-service-service
  namenamespace: callback-proxy-service
  labels:
    app.kubernetes.io/name: callback-proxy-service
    app.kubernetes.io/component: service
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: callback-proxy.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: callback-proxy-service
              servicePort: 8182
  tls:
    - secretName: callback-proxy-service-service-cert
      hosts:
        - callback-proxy.example.com
